--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodetest3",
-  "version": "0.0.1",
+  "name": "MusicalMix",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
